Изменен тип у инпутов на числовой

--- a/index.html
+++ b/index.html
@@ -19,26 +19,26 @@
 				</tr>
 				<tr>
 					<td>
-						<input type="text" id="x-1" class="x">
+						<input type="number" id="x-1" class="x">
 					</td>
 					<td>
-						<input type="text" id="y-1" class="y">
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<input type="text" id="x-2" class="x">
-					</td>
-					<td>
-						<input type="text" id="y-2" class="y">
+						<input type="number" id="y-1" class="y">
 					</td>
 				</tr>
 				<tr>
 					<td>
-						<input type="text" id="x-3" class="x">
+						<input type="number" id="x-2" class="x">
 					</td>
 					<td>
-						<input type="text" id="y-3" class="y">
+						<input type="number" id="y-2" class="y">
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<input type="number" id="x-3" class="x">
+					</td>
+					<td>
+						<input type="number" id="y-3" class="y">
 					</td>
 				</tr>
 			</tbody>
