Обновлена версия css v=1.4 и добавлен селект выбора числа знаков после разделителя

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" href="FaviconAnimeKG.png" type="image/x-png"/>
 	<link rel="shortcut icon" href="FaviconAnimeKG.png" type="image/x-png"/>
-	<link rel="stylesheet" type="text/css" href="css/econometrics.css?v=1.3">
+	<link rel="stylesheet" type="text/css" href="css/econometrics.css?v=1.4">
 </head>
 <body>
 	<main>
@@ -54,6 +54,16 @@
 				<option value="1">Степенной y = a * x^b</option>
 				<option value="2">Параболический  y = a + (b * x) + (c * x^2)</option>
 				<option value="3">Гиперболический y = a + (b / x)</option>
+			</select>
+		</div>
+		<div class="select-trend">
+			<h2 tabindex="0">Выберите число знаков после десятичного разделителя</h2>
+			<select id="select-round">
+				<option value="0">0</option>
+				<option value="1">1</option>
+				<option value="2">2</option>
+				<option value="3">3</option>
+				<option value="4">4</option>
 			</select>
 		</div>
 		<div class="calc">
