Добавлены экспоненциальный и логарифмический расчеты тренда

--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
 				<option value="1">Степенной y = a * x^b</option>
 				<option value="2">Параболический  y = a + (b * x) + (c * x^2)</option>
 				<option value="3">Гиперболический y = a + (b / x)</option>
+				<option value="4">Экспоненциальный y = a * e^bx</option>
+				<option value="5">Логарифмический y = a + b * ln(x)</option>
 			</select>
 		</div>
 		<div class="select-trend">
