Добавлен выбор показательного расчета

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 				<option value="3">Гиперболический y = a + (b / x)</option>
 				<option value="4">Экспоненциальный y = a * e^bx</option>
 				<option value="5">Логарифмический y = a + b * ln(x)</option>
+				<option value="6">Показательный y = a + b^x</option>
 			</select>
 		</div>
 		<div class="select-trend">
