Добавлена слабая реализация английского языка
Добавлена поддержка английского языка(google  translate)
Добавлен код для генерации гугл таблицы
Исправлен код под старую версию ECMAScript
Исправлены формулировки
Добавлены минифицированные версии js
Обновлена версия css v=1.6

--- a/index.html
+++ b/index.html
@@ -1,90 +1,22 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html>
 <head>
-	<title>Эконометрика</title>
+	<title>Econometrics</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" href="FaviconAnimeKG.png" type="image/x-png"/>
 	<link rel="shortcut icon" href="FaviconAnimeKG.png" type="image/x-png"/>
-	<link rel="stylesheet" type="text/css" href="css/econometrics.css?v=1.5">
+	<link rel="stylesheet" type="text/css" href="css/econometrics.css?v=1.6">
 </head>
 <body>
 	<main>
-		<h1 tabindex="0">Эконометрика</h1>
-		<table id="table">
-			<tbody id="tbody">
-				<tr>
-					<td>X</td>
-					<td>Y</td>
-				</tr>
-				<tr>
-					<td>
-						<input type="number" class="x">
-					</td>
-					<td>
-						<input type="number" class="y">
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<input type="number" class="x">
-					</td>
-					<td>
-						<input type="number" class="y">
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<input type="number" class="x">
-					</td>
-					<td>
-						<input type="number" class="y">
-					</td>
-				</tr>
-			</tbody>
-		</table>
-		<div class="buttons">
-			<button class="button-removetr" onclick="removetr()" type="submit">x</button>
-			<button class="button-addtr" onclick="addtr()" type="submit">+</button>
+		<h1 tabindex="1">Choose language / Выберите язык</h1>
+		<div class="selectLang">
+			<a href="html/en/" tabindex="-1"><img src="img/en.png"></a>
+			<a href="html/en/" tabindex="0">English</a>
+			<a href="html/ru/" tabindex="-1"><img src="img/ru.png"></a>
+			<a href="html/ru/" tabindex="0">Русский</a>
 		</div>
-		<div class="select-trend">
-			<h2 tabindex="0">Выберите вид регрессии</h2>
-			<select id="select">
-				<option value="0">Линейная: y = a + (b * x)</option>
-				<option value="1">Степенная: y = a * x^b</option>
-				<option value="2">Параболическая:  y = a + (b * x) + (c * x^2)</option>
-				<option value="3">Гиперболическая: y = a + (b / x)</option>
-				<option value="4">Экспоненциальная: y = a * e^bx</option>
-				<option value="5">Логарифмическая: y = a + b * ln(x)</option>
-				<option value="6">Показательная: y = a + b^x</option>
-			</select>
-		</div>
-		<div class="select-trend">
-			<h2 tabindex="0">Выберите число знаков после десятичного разделителя</h2>
-			<select id="select-round">
-				<option value="1">1</option>
-				<option value="2">2</option>
-				<option value="3">3</option>
-				<option value="4">4</option>
-			</select>
-		</div>
-		<div class="calc">
-			<button class="button-calc" onclick="calc()" type="submit">Решение</button>
-			<button class="button-ggs" onclick="ggs()" type="submit">Гугл таблица</button>
-		</div>
-		<div class="generate" id="generate1"></div>
-		<div class="generate" id="generate2"></div>
-		<div class="generate" id="generate3"></div>
-		<div class="generate" id="generate4"></div>
-		<div class="generate" id="generate5"></div>
-		<div class="generate" id="generate6"></div>
-		<div class="generate" id="generate7"></div>
-		<div class="generate" id="generate8"></div>
-		<div class="generate" id="generate9"></div>
-		<div class="generate" id="generate10"></div>
-		<div class="generate" id="generate11"></div>
 	</main>
-<script src="js/econometrics.js"></script>
-<script src="js/econometrics-ggs.js"></script>
 </body>
 </html>
